xpontus-devel/src/net/sf/xpontus/view/editor/syntax/php/PHPParser.java
/* Generated By:JavaCC: Do not edit this line. PHPParser.java */
package net.sf.xpontus.view.editor.syntax.php;

import java.io.*;
import java.util.*;
import net.sf.xpontus.view.editor.syntax.*;
import net.sf.xpontus.view.editor.*;
import javax.swing.text.Segment;

public  class PHPParser implements ILexer, PHPParserConstants {

public PHPParser(){
        this((LexerInputStream)null);
}


    public void ReInit(Reader reader){
        ReInit(new LexerInputStream(reader));
    }
 private List tokens = new ArrayList(); 
    public void switchTo(int newState) {
        this.token_source.SwitchTo(newState);
    }
 public int getLastTokenTypeOnLine(Segment text, int initialTokenType)
    {
        getTokens(text, initialTokenType, 0);

        return ((Token) tokens.get(tokens.size() - 1)).kind;
    }

    public List getTokens(Segment text, int initialTokenType, int startOffset)
    {
        tokens.clear();

        int state = DEFAULT;

       /* switch (initialTokenType)
        {
        case TEXT_IN_COMMENT:
            state = IN_COMMENT;

            break;

        case COMMENT_START:
            state = IN_COMMENT;

            break;

        case TAG_NAME:
            state = IN_TAG_ATTLIST;

            break;

        case GREF_STRING_END:
            state = IN_TAG_ATTLIST;

            break;

        case XML_TARGET:
            state = IN_XML_DECL;

            break;

        case TEXT_IN_GREF_STRING:
            state = IN_GREF_STRING;

            break;

        case GREF_STRING_START:
            state = IN_GREF_STRING;

            break;

        default:
            break;
        }

       */

        try
        {
             ReInit(new LexerInputStream(
                new CharArrayReader(text.array, text.offset, text.count)));
       // this.SwitchTo(state);

        Token currentToken = null;

            while ((currentToken = getNextToken()).kind != PHPParserConstants.EOF)
            {
                tokens.add(currentToken);
            }
        }
        catch (TokenMgrError err)
        {
            tokens.add(new Token(this.token_source.input_stream.GetImage(), initialTokenType));
        }

        if (tokens.size() == 0)
        {

            tokens.add(new Token(""  , initialTokenType));
        }

        return tokens;
    }

  final public void PhpPage() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PHP_EXPR:
      case HTML_OTHER:
      case HTML:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      HtmlBlock();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PHP_BEGIN:
      jj_consume_token(PHP_BEGIN);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INTEGER_LITERAL:
        case FLOATING_POINT_LITERAL:
        case DOUBLE_STRING_LITERAL_START:
        case SINGLE_STRING_LITERAL_START:
        case HEREDOC_START:
        case REQUIRE_ONCE:
        case REQUIRE:
        case INCLUDE_ONCE:
        case INCLUDE:
        case DEFINE:
        case ECHO:
        case PRINT:
        case SWITCH:
        case CASE:
        case DFLT:
        case BREAK:
        case RETURN:
        case DO:
        case WHILE:
        case FOREACH:
        case FOR:
        case CONTINUE:
        case IF:
        case FUNCTION:
        case CLASS:
        case VAR:
        case PUBLIC:
        case PRIVATE:
        case PROTECTED:
        case ABSTRACT:
        case FINAL:
        case STATIC:
        case INTERFACE:
        case CONST:
        case CLONE:
        case GLOBAL:
        case ARRAY:
        case NEW:
        case PREDEFINED_CONSTANT:
        case PHP_END:
        case DOLLAR:
        case SEMICOLON:
        case TRY:
        case THROW:
        case IDENTIFIER:
        case 105:
        case 109:
        case 112:
        case 114:
        case 142:
        case 147:
        case 148:
        case 149:
        case 150:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        Statement();
      }
      break;
    case 0:
      jj_consume_token(0);
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void HtmlBlock() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case HTML:
      jj_consume_token(HTML);
      break;
    case HTML_OTHER:
      jj_consume_token(HTML_OTHER);
      break;
    case PHP_EXPR:
      jj_consume_token(PHP_EXPR);
      Expression();
      jj_consume_token(PHP_END);
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Statement() throws ParseException {
    if (jj_2_1(2)) {
      LabeledStatement();
    } else if (jj_2_2(2)) {
      ClassDeclaration();
    } else if (jj_2_3(2)) {
      InterfaceDeclaration();
    } else if (jj_2_4(2)) {
      ExpressionStatement();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 109:
        CompoundStatement();
        break;
      case SWITCH:
      case IF:
        SelectionStatement();
        break;
      case DO:
      case WHILE:
      case FOREACH:
      case FOR:
        IterationStatement();
        break;
      case BREAK:
      case RETURN:
      case CONTINUE:
        JumpStatement();
        break;
      case REQUIRE_ONCE:
      case REQUIRE:
      case INCLUDE_ONCE:
      case INCLUDE:
      case 114:
        IncludeStatement();
        break;
      case ECHO:
      case PRINT:
        EchoStatement();
        break;
      case DEFINE:
        DefineStatement();
        break;
      case FUNCTION:
      case VAR:
      case PUBLIC:
      case PRIVATE:
      case PROTECTED:
      case ABSTRACT:
      case FINAL:
      case STATIC:
      case CONST:
      case GLOBAL:
      case DOLLAR:
        MemberDeclaration();
        break;
      case THROW:
        ThrowStatement();
        break;
      case TRY:
        TryBlock();
        break;
      case PHP_END:
      case SEMICOLON:
        EndOfStatement();
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void ThrowStatement() throws ParseException {
    jj_consume_token(THROW);
    ClassInstantiation();
    EndOfStatement();
  }

  final public void TryBlock() throws ParseException {
    jj_consume_token(TRY);
    CompoundStatement();
    label_3:
    while (true) {
      jj_consume_token(CATCH);
      jj_consume_token(105);
      jj_consume_token(IDENTIFIER);
      Variable();
      jj_consume_token(106);
      CompoundStatement();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CATCH:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_3;
      }
    }
  }

  final public void EndOfStatement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SEMICOLON:
      jj_consume_token(SEMICOLON);
      break;
    case PHP_END:
      EmbeddedHtml();
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void EmbeddedHtml() throws ParseException {
    jj_consume_token(PHP_END);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case HTML_OTHER:
      case HTML:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case HTML:
        jj_consume_token(HTML);
        break;
      case HTML_OTHER:
        jj_consume_token(HTML_OTHER);
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PHP_BEGIN:
      jj_consume_token(PHP_BEGIN);
      break;
    case 0:
      jj_consume_token(0);
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void DefineStatement() throws ParseException {
    jj_consume_token(DEFINE);
    jj_consume_token(105);
    String();
    jj_consume_token(107);
    Expression();
    jj_consume_token(106);
    EndOfStatement();
  }

  final public void LabeledStatement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CASE:
      jj_consume_token(CASE);
      Expression();
      jj_consume_token(108);
      Statement();
      break;
    case DFLT:
      jj_consume_token(DFLT);
      jj_consume_token(108);
      Statement();
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void ExpressionStatement() throws ParseException {
    Expression();
    EndOfStatement();
  }

  final public void CompoundStatement() throws ParseException {
    jj_consume_token(109);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
      case FLOATING_POINT_LITERAL:
      case DOUBLE_STRING_LITERAL_START:
      case SINGLE_STRING_LITERAL_START:
      case HEREDOC_START:
      case REQUIRE_ONCE:
      case REQUIRE:
      case INCLUDE_ONCE:
      case INCLUDE:
      case DEFINE:
      case ECHO:
      case PRINT:
      case SWITCH:
      case CASE:
      case DFLT:
      case BREAK:
      case RETURN:
      case DO:
      case WHILE:
      case FOREACH:
      case FOR:
      case CONTINUE:
      case IF:
      case FUNCTION:
      case CLASS:
      case VAR:
      case PUBLIC:
      case PRIVATE:
      case PROTECTED:
      case ABSTRACT:
      case FINAL:
      case STATIC:
      case INTERFACE:
      case CONST:
      case CLONE:
      case GLOBAL:
      case ARRAY:
      case NEW:
      case PREDEFINED_CONSTANT:
      case PHP_END:
      case DOLLAR:
      case SEMICOLON:
      case TRY:
      case THROW:
      case IDENTIFIER:
      case 105:
      case 109:
      case 112:
      case 114:
      case 142:
      case 147:
      case 148:
      case 149:
      case 150:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_5;
      }
      Statement();
    }
    jj_consume_token(110);
  }

  final public void SelectionStatement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IF:
      jj_consume_token(IF);
      jj_consume_token(105);
      Expression();
      jj_consume_token(106);
      Statement();
      label_6:
      while (true) {
        if (jj_2_5(2)) {
          ;
        } else {
          break label_6;
        }
        jj_consume_token(ELSEIF);
        jj_consume_token(105);
        Expression();
        jj_consume_token(106);
        Statement();
      }
      if (jj_2_6(2)) {
        jj_consume_token(ELSE);
        Statement();
      } else {
        ;
      }
      break;
    case SWITCH:
      jj_consume_token(SWITCH);
      jj_consume_token(105);
      Expression();
      jj_consume_token(106);
      Statement();
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void IterationStatement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case WHILE:
      jj_consume_token(WHILE);
      jj_consume_token(105);
      Expression();
      jj_consume_token(106);
      Statement();
      break;
    case DO:
      jj_consume_token(DO);
      Statement();
      jj_consume_token(WHILE);
      jj_consume_token(105);
      Expression();
      jj_consume_token(106);
      EndOfStatement();
      break;
    case FOR:
      jj_consume_token(FOR);
      jj_consume_token(105);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
      case FLOATING_POINT_LITERAL:
      case DOUBLE_STRING_LITERAL_START:
      case SINGLE_STRING_LITERAL_START:
      case HEREDOC_START:
      case CLONE:
      case ARRAY:
      case NEW:
      case PREDEFINED_CONSTANT:
      case DOLLAR:
      case IDENTIFIER:
      case 105:
      case 112:
      case 114:
      case 142:
      case 147:
      case 148:
      case 149:
      case 150:
        Expression();
        break;
      default:
        jj_la1[13] = jj_gen;
        ;
      }
      jj_consume_token(SEMICOLON);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
      case FLOATING_POINT_LITERAL:
      case DOUBLE_STRING_LITERAL_START:
      case SINGLE_STRING_LITERAL_START:
      case HEREDOC_START:
      case CLONE:
      case ARRAY:
      case NEW:
      case PREDEFINED_CONSTANT:
      case DOLLAR:
      case IDENTIFIER:
      case 105:
      case 112:
      case 114:
      case 142:
      case 147:
      case 148:
      case 149:
      case 150:
        Expression();
        break;
      default:
        jj_la1[14] = jj_gen;
        ;
      }
      jj_consume_token(SEMICOLON);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
      case FLOATING_POINT_LITERAL:
      case DOUBLE_STRING_LITERAL_START:
      case SINGLE_STRING_LITERAL_START:
      case HEREDOC_START:
      case CLONE:
      case ARRAY:
      case NEW:
      case PREDEFINED_CONSTANT:
      case DOLLAR:
      case IDENTIFIER:
      case 105:
      case 112:
      case 114:
      case 142:
      case 147:
      case 148:
      case 149:
      case 150:
        Expression();
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
      jj_consume_token(106);
      Statement();
      break;
    case FOREACH:
      jj_consume_token(FOREACH);
      jj_consume_token(105);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
      case FLOATING_POINT_LITERAL:
      case DOUBLE_STRING_LITERAL_START:
      case SINGLE_STRING_LITERAL_START:
      case HEREDOC_START:
      case CLONE:
      case ARRAY:
      case NEW:
      case PREDEFINED_CONSTANT:
      case DOLLAR:
      case IDENTIFIER:
      case 105:
      case 112:
      case 114:
      case 142:
      case 147:
      case 148:
      case 149:
      case 150:
        Expression();
        break;
      default:
        jj_la1[16] = jj_gen;
        ;
      }
      jj_consume_token(AS);
      Variable();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 111:
        jj_consume_token(111);
